--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div align="center" class="home">
+<div align="center" class="start">
 
   <img align="middle" src="/img/start4.jpg">
 
