home page image center

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-layout: start
+layout: default
 ---
 
-<div align="center" class="start">
+<div class="home">
 
-  <img align="middle" src="/img/start4.jpg">
+  <img src="/img/start4.jpg">
 
 </div>
